--- a/appveyor.yml
+++ b/appveyor.yml
@@ -67,8 +67,10 @@ build: "off"
 before_build:
   - echo "before build script"
   - cd %APPVEYOR_BUILD_FOLDER%
-  - SET GLUONCV_DIR=%APPVEYOR_BUILD_FOLDER%\gluon-cv\
   - git clone --recursive https://github.com/dmlc/gluon-cv gluon-cv %GIT_ADDITIONAL_FLAGS%
+  - SET GLUONCV_DIR=%APPVEYOR_BUILD_FOLDER%\gluon-cv\
+  - echo %GLUONCV_DIR%
+  - dir %GLUONCV_DIR%
   - cp /Y setup.py gluon-cv\
   - cd .\gluon-cv
   - FOR /F "delims=" %%i IN ('git rev-parse HEAD') DO echo %%i > COMMIT_HASH
