--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,7 +53,7 @@ install:
   - choco install -y pandoc
   - pandoc --version
   - call %PIP_EXE% install pypandoc nose wheel twine numpy matplotlib scipy
-  - call %PIP_EXE% install mxnet --pre
+  - call %PIP_EXE% install mxnet --pre --upgrade
   - SET NOSE_EXE=%PYTHON_DIR%\Scripts\nosetests
   - SET TWINE_EXE=%PYTHON_DIR%\Scripts\twine
   - dir %PYTHON_DIR%\Scripts\
