--- a/appveyor.yml
+++ b/appveyor.yml
@@ -82,6 +82,7 @@ before_test:
   - echo %GLUONCV_DIR%
   - dir %GLUONCV_DIR%
   - xcopy /Y setup.py gluon-cv\setup.py
+  - xcopy /Y MANIFEST.in gluon-cv\MANIFEST.in
   - cd .\gluon-cv
   - FOR /F "delims=" %%i IN ('git rev-parse HEAD') DO echo %%i > COMMIT_HASH
   - call %PYTHON_EXE% setup.py sdist
