--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,8 +34,7 @@ matrix:
 init:
   - git config --global core.autocrlf input
   - ps: If ($env:APPVEYOR_REPO_TAG -eq "true" ) { write-output "From a tag build"; $GIT_TAG = (echo $env:APPVEYOR_REPO_TAG_NAME | %{$_ -replace "^patch-[^-]*-", ""});  $env:GIT_ADDITIONAL_FLAGS = "-b $GIT_TAG"; write-output $env:GIT_ADDITIONAL_FLAGS} Else { write-output "Not from a tag build"}
-  - ps: $OCCURANCE = $GIT_TAG.Split("-").GetUpperBound(0)
-  - ps: If ($OCCURANCE -eq 2 ) { $GIT_TAG = ($GIT_TAG.Split("-")[$OCCURANCE]); write-output "patching for" $GIT_TAG; } else {write-output "Not patching special commit";}
+  - ps: If ($GIT_TAG.Split("-").GetUpperBound(0) -eq 2 ) { $GIT_TAG = ($GIT_TAG.Split("-")[$GIT_TAG.Split("-").GetUpperBound(0)]); write-output "patching for" $GIT_TAG; } else {write-output "Not patching special commit";}
   - ps: If ($env:APPVEYOR_SCHEDULED_BUILD -eq "True" ) { write-output "From a scheduled build" } Else { write-output "Not from a scheduled build"}
   - set PYTHON_EXE=C:\%PYTHON%\python
   - set PIP_EXE=C:\%PYTHON%\Scripts\pip
